--- a/purplenoise.css
+++ b/purplenoise.css
@@ -301,6 +301,11 @@ h2{
     background: #555; 
   }
 
+  a{
+    background-color: blue;
+    color: white;
+  }
+
 
 @media only screen and (max-width:1200px) {
   /* For tablets: */
